Added the ui of the project and other important modules of the project