@@ -1,85 +1,157 @@
 package com.example.demo.service;
 
-import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
-import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.DataFormatter;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
 import org.apache.poi.ss.usermodel.Workbook;
-import org.apache.poi.ss.usermodel.WorkbookFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.example.demo.model.Backlog;
+import com.example.demo.model.Student;
 import com.example.demo.model.StudentMarks;
+import com.example.demo.model.SubjectRegistration;
+import com.example.demo.repository.BacklogRepository;
 import com.example.demo.repository.StudentMarksRepository;
+import com.example.demo.repository.StudentRepository;
+import com.example.demo.repository.SubjectRegistrationRepository;
 
 @Service
 public class StudentMarksServiceImpl implements StudentMarksService {
 
-    private final StudentMarksRepository repository;
-    private final DataFormatter formatter = new DataFormatter();
+    private static final String[] REQUIRED_HEADERS = {
+            "registrationNumber", "subjectCode", "semester", "grade"
+    };
 
-    public StudentMarksServiceImpl(StudentMarksRepository repository) {
-        this.repository = repository;
-    }
+    @Autowired
+    private StudentMarksRepository repository;
+
+    @Autowired
+    private StudentRepository studentRepository;
+
+    @Autowired
+    private SubjectRegistrationRepository subjectRegistrationRepository;
+
+    @Autowired
+    private BacklogRepository backlogRepository;
 
     @Override
-    public void uploadExcel(MultipartFile file) throws Exception {
-        if (file == null || file.isEmpty()) {
-            throw new RuntimeException("Please upload a valid Excel file.");
+    public List<String> uploadExcel(MultipartFile file) throws Exception {
+        if (!isExcelFile(file)) {
+            return List.of("Please upload a valid Excel file (.xls or .xlsx).");
         }
 
+        List<String> errors = new ArrayList<>();
         List<StudentMarks> marksToSave = new ArrayList<>();
+        List<Backlog> backlogsToSave = new ArrayList<>();
+        DataFormatter formatter = new DataFormatter();
 
-        try (InputStream is = file.getInputStream();
-             Workbook workbook = WorkbookFactory.create(is)) {
-
+        try (Workbook workbook = openWorkbook(file)) {
             Sheet sheet = workbook.getSheetAt(0);
             if (sheet == null || sheet.getPhysicalNumberOfRows() == 0) {
-                throw new RuntimeException("Excel file is empty.");
+                return List.of("Excel file is empty.");
             }
 
             Row headerRow = sheet.getRow(sheet.getFirstRowNum());
-            Map<String, Integer> headers = mapHeaders(headerRow);
+            Map<String, Integer> headers = mapHeaders(headerRow, formatter);
+            List<String> missingHeaders = findMissingHeaders(headers, REQUIRED_HEADERS);
+
+            if (!missingHeaders.isEmpty()) {
+                return List.of("Missing headers: " + String.join(", ", missingHeaders));
+            }
 
             for (int rowIndex = sheet.getFirstRowNum() + 1; rowIndex <= sheet.getLastRowNum(); rowIndex++) {
                 Row row = sheet.getRow(rowIndex);
-                if (isRowEmpty(row)) {
+                if (isRowEmpty(row, formatter)) {
                     continue;
                 }
 
-                StudentMarks marks = new StudentMarks();
-                marks.setStudentName(getCellValue(row, headers, "fullname", "studentname", "name"));
-                marks.setEmail(getCellValue(row, headers, "email", "mail"));
-                marks.setRollNo(getCellValue(row, headers, "rollno", "roll", "regno", "registrationno"));
-                marks.setSemester(getCellValue(row, headers, "semester", "sem"));
-                marks.setBranch(getCellValue(row, headers, "branch", "department", "dept"));
-                marks.setSemMark(getNumericValue(row, headers, "semmark", "sem mark", "semestermark", "semestermarks"));
-                marks.setSubjectCode(getCellValue(row, headers, "subjectcode", "subject", "subjectname", "code"));
+                int excelRow = rowIndex + 1;
 
-                double semMark = defaultNumber(marks.getSemMark());
-                marks.setTotalMarks(round(semMark));
-                marks.setPercentage(round(semMark));
-                marks.setGrade(calculateGrade(semMark));
-                marks.setResult(calculateResult(semMark));
+                String registrationNumber = getCellValue(row, headers, formatter, "registrationNumber", "rollNo", "regNo");
+                String subjectCode = getCellValue(row, headers, formatter, "subjectCode", "code");
+                String semester = getCellValue(row, headers, formatter, "semester", "sem");
+                String grade = getCellValue(row, headers, formatter, "grade").toUpperCase();
 
-                if (!marks.getRollNo().isBlank() || !marks.getStudentName().isBlank()) {
-                    marksToSave.add(marks);
+                validateRequired(errors, excelRow, "registrationNumber", registrationNumber);
+                validateRequired(errors, excelRow, "subjectCode", subjectCode);
+                validateRequired(errors, excelRow, "semester", semester);
+                validateRequired(errors, excelRow, "grade", grade);
+
+                if (registrationNumber.isBlank() || subjectCode.isBlank() || semester.isBlank() || grade.isBlank()) {
+                    continue;
+                }
+
+                Optional<Student> studentOpt = studentRepository.findByRegistrationNumber(registrationNumber);
+                if (studentOpt.isEmpty()) {
+                    errors.add("Row " + excelRow + " - Student not found for reg: " + registrationNumber);
+                    continue;
+                }
+
+                Student student = studentOpt.get();
+                Optional<SubjectRegistration> subRegOpt = subjectRegistrationRepository.findByStudentAndSubjectCodeAndSemester(student, subjectCode, semester);
+                
+                String subjectName = "Unknown";
+                if (subRegOpt.isPresent()) {
+                    subjectName = subRegOpt.get().getSubjectName();
+                } else {
+                    errors.add("Row " + excelRow + " - Student " + registrationNumber + " is not registered for subject " + subjectCode + " in semester " + semester);
+                    continue;
+                }
+
+                // --- Marks Logic ---
+                Optional<StudentMarks> marksOpt = repository.findByRollNoAndSubjectCodeAndSemester(registrationNumber, subjectCode, semester);
+                StudentMarks marks = marksOpt.orElse(new StudentMarks());
+                
+                marks.setRollNo(registrationNumber);
+                marks.setStudentName(student.getFullName());
+                marks.setEmail(student.getEmail());
+                marks.setSemester(semester);
+                marks.setBranch(student.getBranch());
+                marks.setSubjectCode(subjectCode);
+                marks.setGrade(grade);
+                // Since this format only has 'grade', we reset numeric marks to 0 or leave them null if DB allows.
+                // Based on user request, they focus on the grade for automation and report card.
+                marks.setResult(grade.equals("F") || grade.equals("S") ? "FAIL" : "PASS");
+                
+                marksToSave.add(marks);
+
+                // --- Automated Backlog Logic ---
+                if (grade.equalsIgnoreCase("F") || grade.equalsIgnoreCase("S")) {
+                    Optional<Backlog> backlogOpt = backlogRepository.findByRollNoAndSubjectCodeAndSemester(registrationNumber, subjectCode, semester);
+                    Backlog backlog = backlogOpt.orElse(new Backlog());
+                    
+                    backlog.setRollNo(registrationNumber);
+                    backlog.setStudentName(student.getFullName());
+                    backlog.setEmail(student.getEmail());
+                    backlog.setSubjectCode(subjectCode);
+                    backlog.setSubjectName(subjectName);
+                    backlog.setSemester(semester);
+                    backlog.setBranch(student.getBranch());
+                    backlog.setStatus("PENDING");
+                    
+                    backlogsToSave.add(backlog);
+                } else {
+                    // If they passed now but had a backlog before, we could mark it as CLEARED?
+                    // For now, let's keep it simple as requested.
                 }
             }
         }
 
-        if (marksToSave.isEmpty()) {
-            throw new RuntimeException("No valid student marks rows found in the uploaded Excel file.");
+        if (!errors.isEmpty()) {
+            return errors;
         }
 
-        repository.deleteAll();
         repository.saveAll(marksToSave);
+        backlogRepository.saveAll(backlogsToSave);
+
+        return List.of();
     }
 
     @Override
@@ -92,78 +164,65 @@ public class StudentMarksServiceImpl implements StudentMarksService {
         return repository.findByRollNo(rollNo);
     }
 
-    private Map<String, Integer> mapHeaders(Row headerRow) {
-        Map<String, Integer> headers = new HashMap<>();
-        if (headerRow == null) {
-            return headers;
+    private void validateRequired(List<String> errors, int excelRow, String fieldName, String value) {
+        if (value == null || value.isBlank()) {
+            errors.add("Row " + excelRow + " - Missing required value for " + fieldName + ".");
         }
-        for (Cell cell : headerRow) {
-            String key = normalizeHeader(formatter.formatCellValue(cell));
-            if (!key.isEmpty()) {
-                headers.put(key, cell.getColumnIndex());
-            }
+    }
+
+    // --- Excel helpers ---
+
+    private boolean isExcelFile(MultipartFile file) {
+        if (file == null || file.isEmpty() || file.getOriginalFilename() == null) return false;
+        String name = file.getOriginalFilename().toLowerCase();
+        return name.endsWith(".xlsx") || name.endsWith(".xls");
+    }
+
+    private Workbook openWorkbook(MultipartFile file) throws java.io.IOException {
+        return org.apache.poi.ss.usermodel.WorkbookFactory.create(file.getInputStream());
+    }
+
+    private Map<String, Integer> mapHeaders(Row headerRow, DataFormatter formatter) {
+        Map<String, Integer> headers = new java.util.LinkedHashMap<>();
+        if (headerRow == null) return headers;
+        for (org.apache.poi.ss.usermodel.Cell cell : headerRow) {
+            String header = normalizeHeader(formatter.formatCellValue(cell));
+            if (!header.isEmpty()) headers.put(header, cell.getColumnIndex());
         }
         return headers;
     }
 
-    private String getCellValue(Row row, Map<String, Integer> headers, String... aliases) {
+    private List<String> findMissingHeaders(Map<String, Integer> headers, String... required) {
+        List<String> missing = new ArrayList<>();
+        for (String h : required) {
+            if (!headers.containsKey(normalizeHeader(h))) missing.add(h);
+        }
+        return missing;
+    }
+
+    private String getCellValue(Row row, Map<String, Integer> headers, DataFormatter formatter, String... aliases) {
         for (String alias : aliases) {
-            Integer index = headers.get(normalizeHeader(alias));
-            if (index != null) {
-                Cell cell = row.getCell(index);
-                return cell == null ? "" : formatter.formatCellValue(cell).trim();
-            }
+            Integer idx = headers.get(normalizeHeader(alias));
+            if (idx != null) return getCellAt(row, idx, formatter);
         }
         return "";
     }
 
-    private Double getNumericValue(Row row, Map<String, Integer> headers, String... aliases) {
-        try {
-            String value = getCellValue(row, headers, aliases);
-            if (value == null || value.isBlank()) {
-                return 0.0;
-            }
-            value = value.replace("%", "").replace(",", "").trim();
-            return Double.parseDouble(value);
-        } catch (Exception ex) {
-            return 0.0;
-        }
+    private String getCellAt(Row row, int index, DataFormatter formatter) {
+        if (row == null || index < 0) return "";
+        org.apache.poi.ss.usermodel.Cell cell = row.getCell(index);
+        return cell == null ? "" : formatter.formatCellValue(cell).trim();
     }
 
-    private String normalizeHeader(String value) {
-        return value == null ? "" : value.toLowerCase().replaceAll("[^a-z0-9]", "").trim();
-    }
-
-    private boolean isRowEmpty(Row row) {
-        if (row == null) {
-            return true;
-        }
+    private boolean isRowEmpty(Row row, DataFormatter formatter) {
+        if (row == null) return true;
         for (int i = 0; i < row.getLastCellNum(); i++) {
-            Cell cell = row.getCell(i);
-            if (cell != null && !formatter.formatCellValue(cell).trim().isEmpty()) {
-                return false;
-            }
+            if (!getCellAt(row, i, formatter).isBlank()) return false;
         }
         return true;
     }
 
-    private double defaultNumber(Double value) {
-        return value == null ? 0.0 : value;
-    }
-
-    private String calculateGrade(double percentage) {
-        if (percentage >= 90) return "A";
-        if (percentage >= 75) return "B";
-        if (percentage >= 60) return "C";
-        if (percentage >= 50) return "D";
-        return "F";
-    }
-
-    private String calculateResult(double percentage) {
-        return percentage >= 50 ? "PASS" : "FAIL";
-    }
-
-    private double round(double value) {
-        return Math.round(value * 100.0) / 100.0;
+    private String normalizeHeader(String value) {
+        return value == null ? "" : value.toLowerCase().replaceAll("[^a-z0-9]", "").trim();
     }
 }
